// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabFrame > draws the board frame from Frame blocks at token heights (375 and 1280) 1`] = `
[
  {
    "frame": "h1",
    "rows": undefined,
    "shape": [
      "h-(--fs-xl)",
      "w-40",
    ],
  },
  {
    "frame": "picker",
    "rows": undefined,
    "shape": [
      "h-(--tap)",
      "w-[18.5rem]",
    ],
  },
  {
    "frame": "caption",
    "rows": undefined,
    "shape": [
      "h-6",
    ],
  },
  {
    "frame": "select",
    "rows": undefined,
    "shape": [
      "h-[calc(1.375rem+0.375rem+var(--tap))]",
      "w-full",
    ],
  },
  {
    "frame": "list",
    "rows": "12 × h-(--row-min-h)",
    "shape": [
      "flex",
    ],
  },
]
`;

exports[`TabFrame > draws the games frame from Frame blocks at token heights (375 and 1280) 1`] = `
[
  {
    "frame": "h1",
    "rows": undefined,
    "shape": [
      "h-[calc(var(--fs-xl)*1.25)]",
      "w-40",
    ],
  },
  {
    "frame": "caption",
    "rows": undefined,
    "shape": [
      "h-[calc(2*var(--fs-sm)*1.45+1px)]",
      "md:h-6",
    ],
  },
  {
    "frame": "picker",
    "rows": undefined,
    "shape": [
      "h-[calc(var(--tap)+0.5rem+2px)]",
    ],
  },
  {
    "frame": "picker",
    "rows": undefined,
    "shape": [
      "h-[calc(var(--tap)+0.5rem+2px)]",
    ],
  },
  {
    "frame": "select",
    "rows": undefined,
    "shape": [
      "h-[calc(1.3125rem+0.375rem+var(--tap))]",
    ],
  },
  {
    "frame": "caption",
    "rows": undefined,
    "shape": [
      "h-6",
    ],
  },
  {
    "frame": "list",
    "rows": "12 × h-(--row-min-h)",
    "shape": [
      "flex",
    ],
  },
]
`;

exports[`TabFrame > draws the stats frame from Frame blocks at token heights (375 and 1280) 1`] = `
[
  {
    "frame": "h1",
    "rows": undefined,
    "shape": [
      "h-[calc(var(--fs-xl)*1.25)]",
      "w-40",
    ],
  },
  {
    "frame": "picker",
    "rows": undefined,
    "shape": [
      "h-[calc(var(--tap)+0.5rem+2px)]",
    ],
  },
  {
    "frame": "picker",
    "rows": undefined,
    "shape": [
      "h-[calc(var(--tap)+0.5rem+2px)]",
    ],
  },
  {
    "frame": "picker",
    "rows": undefined,
    "shape": [
      "h-[calc(var(--tap)+0.5rem+2px)]",
    ],
  },
  {
    "frame": "caption",
    "rows": undefined,
    "shape": [
      "h-6",
    ],
  },
  {
    "frame": "summary",
    "rows": "3 × h-[46.2px]",
    "shape": [
      "flex",
    ],
  },
  {
    "frame": "list",
    "rows": "12 × h-(--row-min-h)",
    "shape": [
      "flex",
    ],
  },
  {
    "frame": "list",
    "rows": "12 × h-(--row-min-h)",
    "shape": [
      "hidden",
      "lg:flex",
    ],
  },
]
`;

exports[`TabFrame > draws the tonight frame from Frame blocks at token heights (375 and 1280) 1`] = `
[
  {
    "frame": "strip",
    "rows": "2 × first:h-[calc(var(--card-pad)+var(--chip-h)+0.5rem+var(--fs-display)*0.95+0.5rem+2.9*var(--fs-sm)+1rem)] h-[calc(var(--tap)+1.5rem)]",
    "shape": [
      "flex",
    ],
  },
  {
    "frame": "team-card",
    "rows": "6 × first:h-(--thead-h) h-(--seat-min-h)",
    "shape": [
      "flex",
    ],
  },
  {
    "frame": "team-card",
    "rows": "6 × first:h-(--thead-h) h-(--seat-min-h)",
    "shape": [
      "flex",
    ],
  },
  {
    "frame": "rail",
    "rows": "4 × h-(--seat-min-h)",
    "shape": [
      "hidden",
      "lg:flex",
    ],
  },
]
`;

exports[`TabFrame > draws the you frame from Frame blocks at token heights (375 and 1280) 1`] = `
[
  {
    "frame": "h1",
    "rows": undefined,
    "shape": [
      "h-(--fs-xl)",
      "w-40",
    ],
  },
  {
    "frame": "card",
    "rows": "4 × h-(--row-min-h)",
    "shape": [
      "flex",
    ],
  },
  {
    "frame": "card",
    "rows": "3 × h-(--row-min-h)",
    "shape": [
      "flex",
    ],
  },
]
`;
